Made my favorite ice cream flavour!

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <h1>Yarrrrrr, we love ice cream!</h1>
     <p>Ice cream is sooooo goood!</p>
     <a href="https://swirl.hackclub.com/">Join the ice cream cult!</a>
+    <a href="https://www.youtube.com/watch?v=xm3YgoEiEDc&pp=ygUgbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXAgMTAgaG91cnM%3D">My favorite ice cream flavour!</a>
 </body>
 </html>
