add some scoop features

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <a href="https://swirl.hackclub.com/">Join the ice cream cult!</a>
     <br>
     <a href="https://www.youtube.com/watch?v=xm3YgoEiEDc&pp=ygUgbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXAgMTAgaG91cnM%3D">My favorite ice cream flavour!</a>
+    <a href="BANANA FUDGE!!!!!!!!.html">BANANA FUDGEEEEEEE!</a>
+    <button class="my-btn" onclick="alert('I\'ve jusst gotton your ip adress and now I will go to your home and steal ALL your ice cream!')">Click if you like ice cream!</button>
+    <br>
+    <footer class="bottom">
+        <p>&copy; 2025 SirClodsire. All rights reserved.</p>
+    </footer>
 </body>
 </html>
